; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_add_filter_program.c___archive_write_program_allocate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_add_filter_program.c___archive_write_program_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_write_program_data = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.archive_write_program_data* @__archive_write_program_allocate(i8* %0) #0 {
  %2 = alloca %struct.archive_write_program_data*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.archive_write_program_data*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call %struct.archive_write_program_data* @calloc(i32 1, i32 12)
  store %struct.archive_write_program_data* %5, %struct.archive_write_program_data** %4, align 8
  %6 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %4, align 8
  %7 = icmp eq %struct.archive_write_program_data* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %4, align 8
  store %struct.archive_write_program_data* %9, %struct.archive_write_program_data** %2, align 8
  br label %20

10:                                               ; preds = %1
  %11 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %4, align 8
  %12 = getelementptr inbounds %struct.archive_write_program_data, %struct.archive_write_program_data* %11, i32 0, i32 0
  store i32 -1, i32* %12, align 4
  %13 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %4, align 8
  %14 = getelementptr inbounds %struct.archive_write_program_data, %struct.archive_write_program_data* %13, i32 0, i32 1
  store i32 -1, i32* %14, align 4
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @strdup(i8* %15)
  %17 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %4, align 8
  %18 = getelementptr inbounds %struct.archive_write_program_data, %struct.archive_write_program_data* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %4, align 8
  store %struct.archive_write_program_data* %19, %struct.archive_write_program_data** %2, align 8
  br label %20

20:                                               ; preds = %10, %8
  %21 = load %struct.archive_write_program_data*, %struct.archive_write_program_data** %2, align 8
  ret %struct.archive_write_program_data* %21
}

declare dso_local %struct.archive_write_program_data* @calloc(i32, i32) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
